fix flex align content on hero

--- a/style.css
+++ b/style.css
@@ -35,3 +35,7 @@
 .althea__hero-container .header-content {
     max-width: 1240px !important;
 }
+
+.althea__hero-container .header-content-container {
+    align-self: flex-start !important;
+  }
